Font changes, mobile slider, fix alignment

--- a/input.css
+++ b/input.css
@@ -1,8 +1,36 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;700&family=Roboto:wght@100;300;400;700;900&family=Russo+One&display=swap');
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'BebasNeue';
+    font-weight: 100;
+    src: url("fonts/BebasNeue-Thin.otf") format("opentype");
+}
+
+@font-face {
+    font-family: 'BebasNeue';
+    font-weight: 200;
+    src: url("fonts/BebasNeue-Light.otf") format("opentype");
+}
+
+@font-face {
+    font-family: 'BebasNeue';
+    font-weight: 300;
+    src: url("fonts/BebasNeue-Book.otf") format("opentype");
+}
+
+@font-face {
+    font-family: 'BebasNeue';
+    font-weight: 400;
+    src: url("fonts/BebasNeue-Regular.otf") format("opentype");
+}
+
+@font-face {
+    font-family: 'BebasNeue';
+    font-weight: 900;
+    src: url("fonts/BebasNeue-Bold.otf") format("opentype");
+}
 
 html,
 body {
@@ -10,7 +38,8 @@ body {
   height: 100%;
   width: 100%;
   color: #141218;
-  font-family: 'Roboto';
+  font-family: 'BebasNeue', Helvetica, Arial, sans-serif;
+  font-size: 20px;
 }
 
 @layer utilities {
